# xclicker

./: .gitignore  Makefile  install.sh  meson.build
po/: POTFILES.in  meson.build  zh_CN.po
src/: config.c  config.h  main.c  mainwin.c  meson.build  settings.c  utils.c  utils.h  x11api.c  x11api.h
src/resources/ui/: settings-dialog.ui
